--- a/hypr/.config/hypr/backup/hyprland.conf
+++ b/hypr/.config/hypr/backup/hyprland.conf
@@ -86,18 +86,17 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 2
+    gaps_out = 5
 
     border_size = 2
-    gaps_workspaces = 50 
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(EBDBB2) 
-    col.inactive_border = rgb(A4997F)
+    col.active_border = rgba(37f499ee) 
+    col.inactive_border = rgba(323449aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -112,7 +111,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.7
+    inactive_opacity = 1.0
 
     shadow {
         enabled = true
@@ -124,44 +123,52 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 5
-        passes = 3
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
+        size = 3
+        passes = 1
+
+        vibrancy = 0.1696
     }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = yes, please :)
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = menu_decel, 0.1, 1, 0, 1
-    bezier = menu_accel, 0.38, 0.04, 1, 0.07
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
-    bezier = md2, 0.4, 0, 0.2, 1
+    bezier = easeOutQuint,   0.23, 1,    0.32, 1
+    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
+    bezier = linear,         0,    0,    1,    1
+    bezier = almostLinear,   0.5,  0.5,  0.75, 1
+    bezier = quick,          0.15, 0,    0.1,  1
+    bezier = myBezier,       0.05, 0.9,  0.1,  1.05
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = windows, 1, 5, overshot, popin 80%
-    animation = windowsIn, 1, 5, overshot, popin 80%
-    animation = windowsOut, 1, 5, md3_accel, popin 80% # Or linear
-    animation = border, 1, 10, default
-    animation = fade, 1, 3, md3_decel
-    animation = workspaces, 1, 4, md3_decel, slide
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+    animation = global,        1,     10,    default
+   #animation = border,        1,     5.39,  easeOutQuint
+    animation = border,        1,     10,    default
+    animation = borderangle,   1,     8,     default
+   #animation = windows,       1,     4.79,  easeOutQuint
+    animation = windows,       1,     7,     myBezier, slide
+   #animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
+    animation = windowsIn,     1,     7,     myBezier, slide
+   #animation = windowsOut,    1,     1.49,  linear,       popin 87%
+    animation = windowsOut,    1,     7,     myBezier, slide
+   #animation = fadeIn,        1,     1.73,  almostLinear
+   #animation = fadeOut,       1,     1.46,  almostLinear
+   #animation = fade,          1,     3.03,  quick
+    animation = fade,          1,     7,     default
+   #animation = layers,        1,     3.81,  easeOutQuint
+   #animation = layersIn,      1,     4,     easeOutQuint, fade
+   #animation = layersOut,     1,     1.5,   linear,       fade
+   #animation = fadeLayersIn,  1,     1.79,  almostLinear
+   #animation = fadeLayersOut, 1,     1.39,  almostLinear
+   #animation = workspaces,    1,     1.94,  almostLinear, fade
+   animation = workspaces,     1,     6,     myBezier, slide
+   #animation = workspacesIn,  1,     1.21,  almostLinear, fade
+   #animation = workspacesOut, 1,     1.94,  almostLinear, fade
+   #animation = zoomFactor,    1,     7,     quick
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
@@ -176,12 +183,18 @@ animations {
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+}
+
+# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
+master {
+    new_status = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
