--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,64 +1,47 @@
-source = $HOME/.config/hypr/eldritch.conf
-
-$accent = $lovecraft_purple
-$accentAlpha = $lovecraft_purpleAlpha
 $font = IosevkaTerm Nerd Font Mono
 
 general {
-  disable_loading_bar = true
   hide_cursor = true
 }
 
 
 background {
   monitor =
-  path = ~/.config/backgrounds/nicola-samori-death.jpg
-  blur_passes = 2
-  color = $sunken_depths_grey
+  path = ~/.config/backgrounds/nature-of-fear.jpg
+  blur_passes = 0
+  contrast = 0.8916
+  brightness = 0.8916
+  vibrancy = 0.8916
+  vibrancy_darkness = 0.0
 }
 
 # Time
 label {
   monitor = 
-  text = cmd[update:30000] echo "$(date +"%R")"
-  color = $watery_tomb_blue
-  font_size = 90
+  text = $TIME
+  text_align = center
+  color = rgba(255, 255, 255, 1.0)
+  font_size = 40
   font_family = $font
-  position = -30, 0
-  halign = right
-  valign = top
-}
-
-# Date
-label {
-  monitor = 
-  text = cmd[update:43200000] echo "$(date +"%A, %Y %B %d")"
-  color = $watery_tomb_blue
-  font_size = 25
-  font_family = $font
-  position = -30, -150
-  halign = right
-  valign = top
+  position = 20, 100
+  halign = center
+  valign = center
 }
 
 input-field {
   monitor =
-  size = 300, 60
-  outline_thickness = 4
+  size = 320, 55
+  outline_thickness = 0
   dots_size = 0.2
   dots_spacing = 0.2
   dots_center = true
-  outer_color = $accent
-  inner_color = $shallow_depths_grey
-  font_color = $watery_tomb_blue
-  fade_on_empty = false
-  placeholder_text = <span foreground="##$watery_tomb_blueAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+  outer_color = rgba(255, 255, 255, 0)
+  inner_color = rgba(255, 255, 255, 0.1)
+  font_color = rgb(200, 200, 200)
+  fade_on_empty = true
+  placeholder_text = <i><span foreground="##ffffff99">🔒  Enter Password</span></i>
   hide_input = false
-  check_color = $accent
-  fail_color = $rlyeh_red
-  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-  capslock_color = $gold_of_yuggoth  
-  position = 0, -35
+  position = 0, -340
   halign = center
   valign = center
 }
