--- a/starship/.config/backup/starship.toml
+++ b/starship/.config/backup/starship.toml
@@ -21,74 +21,74 @@ right_format = "$cmd_duration $time"
 add_newline = true
 
 [character]
-success_symbol = "[->](bold #89b482)"
-error_symbol = "[->](bold #ea6962)"
-vicmd_symbol = "[❮](bold #d3869b)"
+success_symbol = "[->](bold green)"
+error_symbol = "[->](bold red)"
+vicmd_symbol = "[❮](bold yellow)"
 
 [directory]
-style = "#7daea3 bold"  
+style = "#04d1f9 bold"  
 format = "[ ]($style)[$path]($style) "
 truncation_length = 3
 truncation_symbol = "…/"
 read_only = " "
-read_only_style = "#ea6962"
+read_only_style = "red"
 
 [username]
-style_user = "#89b482 bold"
-style_root = "#ea6962 bold"
+style_user = "#37f499 bold"
+style_root = "#f16c75 bold"
 format = '[\[$user\]]($style)' #Remove '\[' or '\]' if you do not want brackets
 show_always = true
 
 [hostname]
-format = "[@$hostname:](#89b482 bold)"
+format = "[@$hostname:](#37f499 bold)"
 ssh_only = false
 
 [git_branch]
 symbol = " "
-style = "#d3869b bold"
+style = "#a48cf2 bold"
 format = '[$symbol$branch·]($style)'
 
 [git_status]
-style = "#d3869b bold"
+style = "#a48cf2 bold"
 ahead = '⇡${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 behind = '⇣${count}'
 
 [git_commit]
-style = "#d3869b bold"
+style = "#a48cf2 bold"
 commit_hash_length = 4
 tag_symbol = '🔖 '
 
 [git_state]
-style = "#d3869b bold"
+style = "#a48cf2 bold"
 format = '\([$state( $progress_current of $progress_total)]($style)\) '
 
 [nodejs]
 symbol = "⬢ "
-style = "#89b482"
+style = "green"
 format = "[$symbol($version)]($style) "
 
 [lua]
-format = 'via [🌕 $version](bold #7daea3) '
+format = 'via [🌕 $version](bold blue) '
 
 [python]
 symbol = " "
-style = "#7daea3"
+style = "blue"
 format = "[$symbol($version)]($style) "
 
 [rust]
 symbol = "🦀 "
-style = "#ea6962"
+style = "red"
 format = "[$symbol($version)]($style) "
 
 [golang]
 symbol = " "
-style = "#7daea3"
+style = "cyan"
 format = "[$symbol($version)]($style) "
 
 [docker_context]
 symbol = "🐳 "
-style = "#7daea3 bold"
+style = "blue bold"
 format = "[$symbol$context]($style) "
 
 [terraform]
@@ -97,7 +97,7 @@ format = '[🏎💨 $workspace]($style) '
 [aws]
 format = "on [$symbol($profile)(($region))]($style) "
 symbol = "  "
-style = "bold #d8a657"
+style = "bold yellow"
 disabled = true
 [aws.region_aliases]
 ap-southeast-2 = 'au'
@@ -107,21 +107,21 @@ us-east-1 = 'va'
 disabled = false
 format = "on [$symbol($username)]($style) "
 symbol = "󰠅 "
-style = "#7daea3 bold"
+style = "blue bold"
 
 [package]
 symbol = "📦 "
-style = "#d3869b bold"
+style = "208 bold"
 format = "[$symbol$version]($style) "
 
 [cmd_duration]
 min_time = 200
 format = '[\(⏱ $duration\)]($style) '
-style = "#d4be98 bold"
+style = "#f7c67f bold"
 
 [time]
 disabled = false
 time_format = "%T"
 format = "[$time]($style) "
-style = "bold #d3869b"
+style = "bold #a48cf2"
 
