--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-a
+set -g base-index 1
 
 set -g mouse on
 
@@ -16,32 +17,12 @@ set-option -g status-position top
 set -g default-terminal "xterm-ghostty"
 
 # List of plugins
-set -g @plugin 'o0th/tmux-nova'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'egel/tmux-gruvbox'
 
-set -g @nova-nerdfonts true
-set -g @nova-nerdfonts-left 
-set -g @nova-nerdfonts-right 
+set -g @tmux-gruvbox 'dark256'
 
-set -g @nova-pane-active-border-style "#44475a"
-set -g @nova-pane-border-style "#282a36"
-set -g @nova-status-style-bg "#212337"
-set -g @nova-status-style-fg "#d8dee9"
-set -g @nova-status-style-active-bg "#a48cf2"
-set -g @nova-status-style-active-fg "#2e3540"
-set -g @nova-status-style-double-bg "#2d3540"
-
-set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-set -g @nova-segment-mode-colors "#37f499 #282a36"
-
-set -g @nova-segment-whoami "#(whoami)@#h"
-set -g @nova-segment-whoami-colors "#37f499 #282a36"
-
-set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
-
-set -g @nova-rows 0
-set -g @nova-segments-0-left "mode"
-set -g @nova-segments-0-right "whoami"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
