Updated config and added rofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,7 +34,9 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -config ~/.config/rofi/apps.rasi
+#$menu = wofi --show drun
+$music = spotify-launcher
 
 
 #################
@@ -231,7 +233,8 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, space, exec, $menu
+bind = $mainMod, space, exec, $menu -show drun
+bind = $mainMod, S, exec, $music
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -311,6 +314,16 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+layerrule = blur, waybar
+layerrule = blur, logout_dialog
 layerrule = unset, wofi
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
+layerrule = unset, rofi
+layerrule = blur, rofi
+layerrule = ignorezero, rofi
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.1, swaync-control-center
+layerrule = ignorealpha 0.1, swaync-notification-window
