--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -155,5 +155,20 @@
     "tooltip": false,
     "format": "",
     "on-click": "wlogout"
+  },
+  "mpris": {
+    "interval": 10,
+    "format": " {title} ",
+    "format-paused": " {title} {status_icon} ",
+    "on-click": "playerctl play-pause",
+    "on-click-right": "playerctl next",
+    "scroll-step": 5.0,
+    "smooth-scrolling-threshold": 1,
+    "status-icons": {
+      "paused": "󰐎",
+      "playing": "🎶",
+      "stopped": ""
+    },
+    "max-length": 30
   }
 }
