--- a/swaync/.config/swaync/config.json
+++ b/swaync/.config/swaync/config.json
@@ -1,13 +1,14 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
+  "ignore-gtk-theme": true,
   "positionX": "right",
   "positionY": "top",
   "layer": "overlay",
+  "cssPriority": "highest",
   "control-center-margin-top": 20,
   "control-center-margin-bottom": 20,
   "control-center-margin-right": 20,
   "control-center-margin-left": 20,
-  "notification-icon-size": 64,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
   "timeout": 3,
@@ -22,23 +23,26 @@
   "transition-time": 200,
   "hide-on-clear": true,
   "hide-on-action": true,
+  "text-empty": "No Notifications",
   "script-fail-notify": true,
-  "widgets": [
-      "title",
-      "notifications"
-  ],
+  "widgets": ["title", "notifications", "mpris"],
   "widget-config": {
-      "title": {
-          "text": "Notification Center",
-          "clear-all-button": true,
-          "button-text": "󰆴 Clear All"
-      },
-      "dnd": {
-          "text": "Leave me alone!!"
-      },
-      "label": {
-          "max-lines": 1,
-          "text": "Notification Center"
-      }
+    "title": {
+      "text": "Notification Center",
+      "clear-all-button": true,
+      "button-text": "󰆴 Clear All"
+    },
+    "dnd": {
+      "text": "Leave me alone!!"
+    },
+    "label": {
+      "max-lines": 1,
+      "text": "Notification Center"
+    },
+    "mpris": {
+      "autohide": false,
+      "show-album-art": "always",
+      "loop-carousel": true
+    }
   }
 }
