--- a/swaync/.config/swaync/config.json
+++ b/swaync/.config/swaync/config.json
@@ -1,10 +1,8 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-  "ignore-gtk-theme": true,
   "positionX": "right",
   "positionY": "top",
   "layer": "overlay",
-  "cssPriority": "highest",
   "control-center-margin-top": 20,
   "control-center-margin-bottom": 20,
   "control-center-margin-right": 20,
@@ -17,32 +15,34 @@
   "fit-to-screen": false,
   "control-center-width": 400,
   "control-center-height": 600,
-  "notification-window-width": 490,
+  "notification-window-width": 390,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": true,
   "hide-on-action": true,
-  "text-empty": "No Notifications",
   "script-fail-notify": true,
-  "widgets": ["title", "notifications", "mpris"],
+  "widgets": [
+      "title",
+      "notifications",
+      "mpris"
+  ],
   "widget-config": {
-    "title": {
-      "text": "Notification Center",
-      "clear-all-button": true,
-      "button-text": "󰆴 Clear All"
-    },
-    "dnd": {
-      "text": "Leave me alone!!"
-    },
-    "label": {
-      "max-lines": 1,
-      "text": "Notification Center"
-    },
-    "mpris": {
-      "autohide": false,
-      "show-album-art": "always",
-      "loop-carousel": true
-    }
+      "title": {
+          "text": "Notification Center",
+          "clear-all-button": true,
+          "button-text": "󰆴 Clear All"
+      },
+      "dnd": {
+          "text": "Leave me alone!!"
+      },
+      "label": {
+          "max-lines": 1,
+          "text": "Notification Center"
+      },
+      "mpris": {
+        "show-album-art": "when-available",
+        "loop-carousel": false
+      }
   }
 }
