Add latest version

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -209,6 +209,17 @@ input {
     }
 }
 
+device {
+  name = keychron--keychron-link--keyboard
+  kb_layout = se
+  kb_variant = nodeadkeys
+}
+
+device {
+  name = ducky-ducky-one-3-mini-rgb-1
+  kb_layout = us
+}
+
 # See https://wiki.hypr.land/Configuring/Gestures
 gesture = 3, horizontal, workspace
 
