Update keyboard config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -216,7 +216,22 @@ device {
 }
 
 device {
+  name = ducky-ducky-one-3-mini-rgb
+  kb_layout = us
+}
+
+device {
   name = ducky-ducky-one-3-mini-rgb-1
+  kb_layout = us
+}
+
+device {
+  name = ducky-ducky-one-3-mini-rgb-2
+  kb_layout = us
+}
+
+device {
+  name = ducky-ducky-one-3-mini-rgb-3
   kb_layout = us
 }
 
